fix spacing

--- a/uji/src/App.css
+++ b/uji/src/App.css
@@ -18,9 +18,6 @@
   justify-content: space-between;
 }
 
-
-
-
 .UJI {
   padding-top: var(--large-padding);
   padding-left: var(--large-padding);
@@ -75,4 +72,11 @@
   padding: 20px;
 }
 
-
+@keyframes FadeAnim {
+  0% {
+     opacity: 0;
+  }
+  100% {
+     opacity: 1;
+  }
+}
